feat: Implement an interactive project scheduler with a utility module and a Jupyter notebook.

--- a/Project_Scheduling_App/scheduler_notebook.ipynb
+++ b/Project_Scheduling_App/scheduler_notebook.ipynb
@@ -9,25 +9,11 @@
                 "This notebook provides an interactive drag-and-drop interface for project scheduling.\n",
                 "\n",
                 "**Instructions:**\n",
-                "1. Run all cells in order\n",
-                "2. Choose your difficulty level from the dropdown\n",
-                "3. Use the visual board to drag tasks to worker lanes\n",
-                "4. Position tasks at specific hours on the timeline\n",
-                "5. Watch for color-coded warnings (red=overlap, orange=precedence, pink=skill mismatch)\n",
-                "6. The makespan updates automatically as you arrange tasks"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Download utility module from GitHub if needed\n",
-                "# Uncomment the following lines if you want to download from your repo:\n",
-                "\n",
-                "# !rm -f jup_util.py\n",
-                "# !wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/Project_Scheduling_App/jup_util.py"
+                "1. Run all cells in order.\n",
+                "2. Use the **Configuration Cell** to choose your difficulty (Hard Mode vs Normal).\n",
+                "3. Use the visual board to drag tasks to worker lanes.\n",
+                "4. Position tasks at specific hours on the timeline.\n",
+                "5. Watch for color-coded warnings (red=overlap, orange=precedence, pink=skill mismatch)."
             ]
         },
         {
@@ -37,9 +23,13 @@
             "outputs": [],
             "source": [
                 "# Import the scheduler utilities\n",
-                "from jup_util import SchedulingLogic, create_scheduler_html\n",
+                "import importlib\n",
+                "import jup_util\n",
                 "from IPython.display import HTML, display\n",
-                "import ipywidgets as widgets\n",
+                "\n",
+                "# Force reload to ensure latest logic and HTML template updates are applied\n",
+                "importlib.reload(jup_util)\n",
+                "from jup_util import SchedulingLogic, create_scheduler_html\n",
                 "\n",
                 "print(\"✅ Scheduler utilities loaded successfully!\")"
             ]
@@ -50,19 +40,16 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Configure and Display the interactive scheduler\n",
-                "difficulty = widgets.Dropdown(\n",
-                "    options=[('Normal (3 Projects)', False), ('🔥 Hard Mode (6 Projects)', True)],\n",
-                "    value=False,\n",
-                "    description='Difficulty:',\n",
-                "    style={'description_width': 'initial'}\n",
-                ")\n",
+                "# --- ⚙️ CONFIGURATION --- #\n",
+                "HARD_MODE = False  # Set to True for 6 projects (40h), False for 3 projects (24h)\n",
+                "# ------------------------ #\n",
                 "\n",
-                "def start_simulation(hard_mode):\n",
-                "    logic = SchedulingLogic(hard_mode=hard_mode)\n",
-                "    display(HTML(create_scheduler_html(logic)))\n",
+                "logic = SchedulingLogic(hard_mode=HARD_MODE)\n",
+                "html_display = create_scheduler_html(logic)\n",
                 "\n",
-                "widgets.interact(start_simulation, hard_mode=difficulty);"
+                "# This line renders the interactive board. \n",
+                "# If the board appears blank, ensure you have run the cell above first.\n",
+                "HTML(html_display)"
             ]
         },
         {
@@ -72,9 +59,9 @@
                 "## 📝 How to Use This Scheduler\n",
                 "\n",
                 "### Interactive Features:\n",
-                "- **Difficulty Selector**: Switch between Normal and Hard Mode. Hard Mode adds 3 extra projects and expands the timeline to 40h.\n",
+                "- **Difficulty Selection**: Change `HARD_MODE = True` in the configuration cell above and re-run it to expand to 40 hours and 6 projects.\n",
                 "- **Drag Tasks**: Click and drag tasks from the pool or timeline.\n",
-                "- **Detailed Tooltips**: Hover over tasks in the pool to see their duration and required skills.\n",
+                "- **Detailed Tooltips**: Hover over tasks in the pool or timeline to see duration and required skills.\n",
                 "- **Visual Feedback**:\n",
                 "  - 🔴 **Red Background**: Time overlap detected\n",
                 "  - 🟠 **Dashed Border**: Precedence constraint violated\n",
@@ -91,14 +78,7 @@
                 "1. Start with tasks that have no prerequisites.\n",
                 "2. Respect skill requirements (hover to see warnings).\n",
                 "3. Avoid overlapping tasks on the same worker.\n",
-                "4. Hard Mode requires much more careful resource planning over a 40-hour window!\n",
-                "\n",
-                "---\n",
-                "\n",
-                "**To run in Google Colab:**\n",
-                "1. Upload this notebook and `jup_util.py` to your environment.\n",
-                "2. Run all cells.\n",
-                "3. Start scheduling!\n"
+                "4. **Hard Mode** expands the timeline to **40h** to fit the increased project load!\n"
             ]
         }
     ],
